[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies and Bosses/[ENEMY] Bird.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemy Bird Explosion/1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemy Bird Explosion/2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemy Bird Explosion/3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemy Bird Explosion/4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemy Bird/1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemy Bird/2.png" type="Texture" id=7]
[ext_resource path="res://Sounds/Megabuster/metal-slug-scream.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/Megabuster/buster shot hit wall.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Explode",
"speed": 3.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Fly",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[node name="[ENEMY] Bird" type="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 10 )
scale = Vector2( 4.8, 2.5 )
shape = SubResource( 2 )

[node name="FrontRaycast" type="RayCast2D" parent="."]
position = Vector2( 49, 1 )
scale = Vector2( 1.5, 0.7 )
enabled = true

[node name="DisappearTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Sounds" type="Node" parent="."]
editor/display_folded = true

[node name="KilledScream" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )

[node name="BulletHit" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
[connection signal="timeout" from="DisappearTimer" to="." method="_on_DisappearTimer_timeout"]
